tests/Metalama.Framework.Tests.AspectTests/Tests/Aspects/InvalidCode/DuplicatePropertyTemplate.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error CS0102 on `Instance`: `The type 'Aspect' already contains a definition for 'Instance'`